source/blender/modifiers/intern/MOD_explode.c
@@ -982,7 +982,7 @@ static Mesh *explodeMesh(ExplodeModifierData *emd,
   /* getting back to object space */
   invert_m4_m4(imat, ctx->object->obmat);
 
-  psmd->psys->lattice_deform_data = psys_create_lattice_deform_data(&sim);
+  psys_sim_data_init(&sim);
 
   /* duplicate & displace vertices */
   ehi = BLI_edgehashIterator_new(vertpahash);
@@ -1103,10 +1103,7 @@ static Mesh *explodeMesh(ExplodeModifierData *emd,
   BKE_mesh_calc_edges_tessface(explode);
   BKE_mesh_convert_mfaces_to_mpolys(explode);
 
-  if (psmd->psys->lattice_deform_data) {
-    BKE_lattice_deform_data_destroy(psmd->psys->lattice_deform_data);
-    psmd->psys->lattice_deform_data = NULL;
-  }
+  psys_sim_data_free(&sim);
 
   return explode;
 }
